--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@remix-run/server-runtime": "^2.3.1",
     "@sentry/profiling-node": "^1.2.6",
     "@sentry/remix": "^7.83.0",
+    "@types/folder-hash": "^4.0.4",
     "address": "^2.0.1",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
@@ -79,6 +80,7 @@
     "execa": "^8.0.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "folder-hash": "^4.0.4",
     "get-port": "^7.0.0",
     "glob": "^10.3.10",
     "helmet": "^7.1.0",
@@ -86,6 +88,7 @@
     "isbot": "^3.7.1",
     "litefs-js": "^1.1.2",
     "lru-cache": "^10.1.0",
+    "mdx-bundler": "^10.0.1",
     "morgan": "^1.10.0",
     "prisma": "^5.6.0",
     "qrcode": "^1.5.3",
@@ -136,7 +139,7 @@
     "@vitest/coverage-v8": "^0.34.6",
     "chokidar": "^3.5.3",
     "enforce-unique": "^1.2.0",
-    "esbuild": "^0.19.8",
+    "esbuild": "^0.19.11",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "fs-extra": "^11.2.0",
