--- a/package.json
+++ b/package.json
@@ -64,10 +64,13 @@
     "@sentry/profiling-node": "^1.2.6",
     "@sentry/remix": "^7.83.0",
     "@types/folder-hash": "^4.0.4",
+    "@unpic/pixels": "^1.2.1",
+    "@unpic/placeholder": "^0.1.2",
     "address": "^2.0.1",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^9.1.1",
+    "blurhash": "^2.0.5",
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
     "close-with-grace": "^1.2.0",
@@ -91,6 +94,7 @@
     "litefs-js": "^1.1.2",
     "lru-cache": "^10.1.0",
     "mdx-bundler": "^10.0.1",
+    "mime": "^4.0.1",
     "morgan": "^1.10.0",
     "prisma": "^5.6.0",
     "qrcode": "^1.5.3",
@@ -101,6 +105,7 @@
     "remix-auth-github": "^1.6.0",
     "remix-utils": "^7.3.0",
     "set-cookie-parser": "^2.6.0",
+    "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "source-map-support": "^0.5.21",
     "spin-delay": "^1.2.0",
