--- a/package.json
+++ b/package.json
@@ -48,13 +48,16 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-visually-hidden": "^1.0.3",
     "@react-email/components": "^0.0.11",
     "@remix-run/css-bundle": "^2.3.1",
     "@remix-run/express": "^2.3.1",
@@ -87,6 +90,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "folder-hash": "^4.0.4",
+    "framer-motion": "^11.0.3",
     "get-port": "^7.0.0",
     "glob": "^10.3.10",
     "helmet": "^7.1.0",
