Blog page, contact page

--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reading-time": "^1.5.0",
+    "rehype-highlight": "^7.0.0",
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.4.0",
     "remix-auth-github": "^1.6.0",
@@ -128,6 +130,7 @@
     "@remix-run/serve": "^2.3.1",
     "@remix-run/testing": "^2.3.1",
     "@sly-cli/sly": "^1.4.10",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
