Update playwright test

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ INTERNAL_COMMAND_TOKEN="some-made-up-token"
 RESEND_API_KEY="re_blAh_blaHBlaHblahBLAhBlAh"
 SENTRY_DSN="your-dsn"
 CACHE_CONTENT_SECRET="something-secret"
+CONVERTKIT_API_KEY="_abc123"
+CONVERTKIT_FORM_ID="1234567"
