--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@remix-run/node": "^2.3.1",
     "@remix-run/react": "^2.3.1",
     "@remix-run/server-runtime": "^2.3.1",
+    "@resvg/resvg-js": "^2.6.2",
     "@sentry/profiling-node": "^1.2.6",
     "@sentry/remix": "^7.83.0",
     "@types/folder-hash": "^4.0.4",
@@ -111,6 +112,7 @@
     "remix-auth-form": "^1.4.0",
     "remix-auth-github": "^1.6.0",
     "remix-utils": "^7.3.0",
+    "satori": "^0.10.13",
     "set-cookie-parser": "^2.6.0",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
