--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
       - dev
-  pull_request: {}
+  # pull_request: {}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
